--- a/mops.toml
+++ b/mops.toml
@@ -2,7 +2,7 @@
 name = "ics2-core"
 version = "0.1.0"
 description = "Core module for ics2 solution. ICS2 stands for ICP based storage service"
-repository = ""
+repository = "https://github.com/sergeybykov85/ics2-core"
 keywords = [ "ics2", "storage", "data bucket" ]
 license = "MIT"
 
